--- a/index.html
+++ b/index.html
@@ -1,12 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chunbae's Website</title>
 </head>
+
 <body>
+    <table cellspacing="20">
+        <tr>
+            <td><img src="chunbae.png" alt="Avatar"></td>
+            <td><h1>Chaeyoung Lee</h1>
+                <p><em> Aspiring Data Diva </em></p>
+                <p>
+                    IT Solution Engineer pursuing a career in data engineering with experience in data pipeline administration, ETL, and
+                     long-term client support of high-impact, healthcare analytics infrastructure. Highly analytical and process-oriented with
+                      in-depth knowledge in data regression models and analysis to deliver insights and implement action-oriented solutions to complex business solutions.
+                </p></td>
+        </tr>
+    </table>
+
+    <hr>
+    <h3>Education</h3>
+    <ul>
+        <li>UCLA Statistics</li>
+    </ul>
+    <h3>Professional Experiences</h3>
+
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Dates</th>
+                <th>Work</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+        <tfoot>
+
+        </tfoot>
+        <tr>
+            <td>2022</td>
+            <td>Analytics Engineer @ Fetch Rewards</td>
+        </tr>
+        <tr>
+            <td>2021-2022</td>
+            <td>Techincal Solution Engineer @ Epic Systems</td>
+        </tr>
+    </table>
     
+    <h3>Skills</h3>
+    <table cellspacing="10">
+        <tr>
+            <td>SQL</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Python</td>
+            <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Database Management</td>
+            <td>⭐⭐⭐⭐</td>
+        </tr>
+    </table>
+
+    <br>
+    <a href="hobbies.html">My hobbies</a>
+    <br>
+    <a href="contact.html">Contact me</a>
 </body>
+
 </html>
